--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -17,7 +17,7 @@
             </div>
 
             <a class="btn btn-sm btn-primary"
-               th:href="@{/user}"
+               th:href="@{/user/create}"
                sec:authorize="hasAuthority('USER_UPDATE_ALL')">
                 <i class="bi bi-plus-lg me-1"></i>
                 Create user
